ex6/app-stack.yaml
apiVersion: v1
kind: Pod
metadata:
  namespace: app-stack
  labels:
    tier: frontend
    app: todo
  name: frontend
spec:
  containers:
  - image: nginx
    name: frontend
---
apiVersion: v1
kind: Pod
metadata:
  namespace: app-stack
  labels:
    tier: backend
    app: todo
  name: backend
spec:
  containers:
  - image: nginx
    name: backend
---
apiVersion: v1
kind: Pod
metadata:
  namespace: app-stack
  labels:
    tier: database
    app: todo
  name: database
spec:
  containers:
  - image: mysql
    name: database
