ex6/nginx-back.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    tier: backend
    app: nginx
  name: backend
spec:
  containers:
  - image: nginx
    name: backend
    ports:
    - containerPort: 80
