ex6/nginx.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    tier: frontend
    app: nginx
  name: frontend
spec:
  containers:
  - image: nginx
    name: frontend
    ports:
    - containerPort: 80
  restartPolicy: Always
