ex6/nginxSvc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  selector:
    tier: backend
    app: nginx
  ports:
    - protocol: TCP
      port: 9000
      targetPort: 8081
